--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,11 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	
 	<name>maven-web-application</name>
 
 	<description>Maven Web Project for Java Project</description>
-
 	<organization>
 		<name>Landmark Technologies</name>
 		<url>http://landmarktechnologies.com/</url>
@@ -21,12 +20,11 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://18.204.211.185:9000/</sonar.host.url>
+		<sonar.host.url>http://18.204.211.185:9000</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 	</properties>
 
 	<dependencies>
@@ -59,7 +57,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- compile dependencies -->
+		<!-- compile dependencies nnn-->
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -94,10 +92,11 @@
 	</dependencies>
 	
 	<distributionManagement>
+		
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://54.193.55.233:8181/mynexus/repository/paypal-rel/</url>
+	      <url>http://http://54.193.55.233:8181/mynexus/repository/paypal-rel/</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
@@ -105,7 +104,6 @@
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
 	      <url>http://http://54.193.55.233:8181/mynexus/repository/paypal-snap/</url>
 	    </snapshotRepository>
-	    
 	</distributionManagement>
 	
 	<build>
