--- a/pom.xml
+++ b/pom.xml
@@ -96,18 +96,18 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://http://54.193.55.233:8181/mynexus/repository/maven-releases/</url> 
+	      <url>http://http://54.193.55.233:8181/mynexus/repository/tesla-releases/</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://http://54.193.55.233:8181/mynexus/repository/maven-snapshots/</url>
+	      <url>http://http://54.193.55.233:8181/mynexus/repository/tesla-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
 	<build>
-		<finalName>maven</finalName>
+		<finalName>paypal-web</finalName>
 		
 		<plugins>
 			<plugin>
